# instabids-live

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.lockgen  Dockerfile.lockgen-v2  ONBOARDING.md  adk_check_output.txt  adk_diag.py  adk_inspection_results.txt  check_adk_import.py  clean_google_namespace.py_deleted  diag_agent_init.py  diag_output.txt  diag_script.py  poetry.lock.bak2  pyproject.toml  simple_print.py  simple_test.py  temp_adk_module_test.py  temp_import_test.py  temp_inspect_adk.py  test_adk_event_import.py  test_adk_event_import_output.txt
.adk/: components.json
src/: check_adk_import.py  check_module_visibility.py
src/agents/: __init__.py
src/agents/_DISABLED_homeowner/: __init__.py  agent.py  instruction.py  tools.py
src/agents/bid_card_agent/: __init__.py  agent.py  instruction.py  tools.py
src/agents/homeowner/: __init__.py  agent.py  instruction.py  tools.py
src/agents/homeowner_live/: __init__.py  agent.py
src/agents/image_test_agent/: __init__.py  agent.py
src/session/: __init__.py  supabase_session.py
src/tools/: __init__.py  supabase_tools.py  vision.py
